mudanca para o copyonwritearrey